1998-05-13  Stefan Taferner  <taferner@kde.org> (KMail-0.6.7)

	* Filters: Bugfix: when deleting a folder that was the target
	of a filter the next get-mails crashed.

	* Filter Dialog: Deleting filter rules did not work. Fixed.

1998-05-09  Markus Wuebben  <markus@kde.org>

	* kmsettings.cpp (KMAccountSettings):
	Fixed "Delete mail from server". The row was too low.
	* kmmainwin.cpp
	Added a single account mail check option.

1998-04-29  Markus Wuebben  <markus@kde.org>

	* Reader: Fixed the url parsing which made kmail 
	loop.

1998-04-28  Stefan Taferner  <taferner@kde.org> (KMail-0.6.6)

	* Folders: Emptying of the trash folder resulted in an infinite 
	loop. Fixed now.

1998-04-04  Stefan Taferner  <taferner@kde.org> (Kde Beta-4)

	* Filters: Removed warning dialog. Filters are working ok for
	me for several weeks now.

	* Folders: After I finally also deleted lots of important messages
	by mistake I now changed the behaviour of Folder->Empty to
	move the messages into trash instead of deleting them ;-)
	This made the "Are you sure" dialog now obsolete, IMO.

1998-03-31  Stefan Taferner  <taferner@kde.org> (KMail-0.6.5)

	* Folders: fixed bug introduced on 1998-03-26: open failed on
	folders where lock() returned an error.

1998-03-28  Stefan Taferner  <taferner@kde.org>

	* Headers: when opening a folder the contents was not automatically
	sorted, now is.

	* Pop: new messages retrieved from pop accounts were not
	marked new. Now fixed.

1998-03-26  Stefan Taferner  <taferner@kde.org>

	* Folders: when opening and locking a folder there were
	cases (in fact most of the time) when the folder seemed
	to be not locked but was. Now this is handled better.

1998-03-24  Stefan Taferner  <taferner@kde.org>  (KMail-0.6.4)

	* Message: decoding of quoted-printable RFC1522 strings
	was broken for strings that started with a decoded character.

1998-03-18  Stefan Taferner  <taferner@kde.org>

	* Reader: improved detection of urls and email addresses